--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.3",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.7.0",
